# ezex-core

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  lint.yml  test.yml  testing.yml
common/: Cargo.toml
common/procedural/: Cargo.toml
common/procedural/src/: lib.rs
common/src/: config_registry.rs  lib.rs  macros.rs  utils.rs
common/src/database/: pagination.rs
common/src/event/: mod.rs
common/src/logger/: config.rs  mod.rs
common/src/redis/: mod.rs  redis_bus.rs  stream.rs
common/src/testsuite/: mod.rs  postgres.rs  redis.rs  test_tools.rs  wallet.rs
common/src/topic/: deposit.rs  mod.rs
common/src/wallet_addresses/: mod.rs  tests.rs
common/tests/: env_prefix_test.rs  macro_event_key_test.rs  macro_test.rs  pagination_test.rs
container/: README.md  build.sh  builder.Dockerfile  deposit.Dockerfile
deposit/: .env.example  .env.sample  CHANGELOG.md  Cargo.toml  README.md  build.rs  diesel.toml
deposit/src/: commands.rs  config.rs  deposit.rs  deposit_test.rs  lib.rs  main.rs  model.rs  redis_bus.rs  vault.rs  vault_test.rs
deposit/src/api/grpc/: config.rs  mod.rs  server.rs  service.rs
deposit/src/api/grpc/proto/: vault.proto
deposit/src/cmd/: address.rs  mod.rs  start.rs
deposit/src/commands/: address.rs  start.rs
deposit/src/database/: mod.rs  postgres.rs  provider.rs  schema.rs
deposit/src/database/postgres/: config.rs  mod.rs  models.rs  postgres.rs  postgres_test.rs  schema.rs
deposit/src/database/postgres/migrations/2025-02-20-092017_create_address_book/: down.sql  up.sql
deposit/src/event_bus/: events.rs  mock.rs  mod.rs  provider.rs  redis.rs
deposit/src/grpc/: config.rs  mod.rs  server.rs  service.rs
deposit/src/grpc/proto/: deposit.proto  ezex_deposit.proto
deposit/src/kms/: config.rs  ezex.rs  kms.rs  mock.rs  mod.rs  provider.rs  sample_provider.rs
deposit/src/migrations/2025-04-15-043840_create_addresses/: up.sql
deposit/src/redis/: mod.rs
deposit/src/types/: mod.rs
deposit/tests/: grpc.rs  service.rs  topics.rs
spot/: Cargo.toml  build.rs
spot/database/: Cargo.toml
spot/database/src/: config.rs  db.rs  models.rs  persistence.rs  provider.rs  repository.rs  schema.rs
spot/src/: utils.rs
spot/src/config/: app_config.rs
spot/src/grpc/: helper.rs  server.rs  service.rs
spot/src/market/: market.rs  market_manager.rs  mod.rs
spot/src/models/: matched_trade.rs  trade_order.rs
spot/src/order_book/: mod.rs  order_book.rs
spot/src/tests/: test_models.rs
