[workspace]

members = ["deposit","spot" , "spot/database" , "common", "common/procedural"]

[workspace.dependencies]
tonic = { version = "0.12" }
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
diesel = { version = "2.2", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = { version = "2.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_redis = { git = "https://github.com/ezex-io/serde-redis" }
redis_stream_bus = { git = "https://github.com/ezex-io/redis-stream-bus" }
chains-rs = {git = "https://github.com/ezex-io/chains" }
async-trait = "0.1"
async-std = "1.13"
redis = "0.29"
log = "0.4"
log4rs = "1.3"
rand = "0.9"
strum = "0.27"
strum_macros = "0.27"
thiserror = "2.0"
futures = "0.3"
anyhow = "1.0"
uuid = "1.14"
r2d2 = "0.8"
chrono = "0.4"
prost = "0.13"

# Binary dependencies
structopt = { version = "0.3", default-features = false }
ctrlc = { version = "3.4" }

# Dev Dependencies
mockall = "0.13"
assert_cmd = "2.0"
httpmock = "0.7"
predicates = "3.0"
nix = "0.29"
serial_test = "3.2"
portpicker = "0.1"

# Build Dependencies
tonic-build = "0.12"
