[workspace]
members = ["deposit", "spot", "spot/database", "common", "common/procedural"]
# see: https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions
resolver = "3"

[workspace.dependencies]
tonic = { version = "0.13" }
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }
diesel = { version = "2.2", features = ["postgres", "chrono", "r2d2", "uuid"] }
diesel_migrations = { version = "2.2" }
clap = { version = "4.5", features = ["derive", "env"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_redis = { git = "https://github.com/ezex-io/serde-redis" }
redis_stream_bus = { git = "https://github.com/ezex-io/redis-stream-bus" }
chains-rs = { git = "https://github.com/ezex-io/chains" }
async-trait = "0.1"
redis = "0.31"
log = "0.4"
log4rs = "1.3"
rand = "0.9"
thiserror = "2.0"
futures = "0.3"
anyhow = "1.0"
chrono = "0.4"
prost = "0.13"
dotenvy = "0.15"
erased-serde = "0.3"
procedural = { path = "common/procedural" }

# Binary dependencies
ctrlc = { version = "3.4" }

# Dev Dependencies
mockall = "0.13"
assert_cmd = "2.0"
httpmock = "0.7"
predicates = "3.1"
nix = "0.29"
serial_test = "3.2"
portpicker = "0.1"

# Build Dependencies
tonic-build = "0.13"
