[package]
edition = "2024"
name = "common"
version = "1.0.0"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros"] }
log = { workspace = true }
log4rs = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
serde_redis = { workspace = true }
redis_stream_bus = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tonic = { workspace = true }
diesel = { workspace = true }
async-trait = { workspace = true }
redis = { workspace = true, features = ["streams"] }
procedural = { path = "./procedural" }
portpicker = { workspace = true }
erased-serde = { workspace = true }
dotenvy = {workspace = true}

[dev-dependencies]
mockall = { workspace = true }

