[package]
edition = "2021"
name = "common"
version = "1.0.0"

[features]
default = []
postgres = ["diesel"]

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros"] }
log = { workspace = true }
log4rs = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
serde_redis = { workspace = true }
redis_stream_bus = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tonic = { workspace = true }
diesel = { workspace = true, optional = true }
async-trait = { workspace = true }
redis = { workspace = true, features = ["streams"] }
procedural = { path = "./procedural" }
portpicker = { workspace = true }
erased-serde = { workspace = true }
dotenvy = {workspace = true}
inventory = { workspace = true }
ed25519-dalek = "2.1"
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
ripemd = "0.1"
base58 = "0.2"
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
mockall = { workspace = true }

