[package]
name = "ezex-deposit"
version = "1.0.0"
authors = ["ezeX development team"]
edition = "2021"
autotests = false

[[test]]
name = "test_deposit"
path = "tests/service.rs"

[[bin]]
name = "ezex-deposit"
path = "src/main.rs"

[dependencies]
tonic = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_redis = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
chrono = { workspace = true }
prost = { workspace = true }
ctrlc = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chains-rs = { workspace = true }
common = { path = "../common" }
procedural = { workspace = true }
redis_stream_bus = { workspace = true }
erased-serde = { workspace = true }
redis = { workspace = true } # TODO: WE may no need it here
inventory = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
assert_cmd = { workspace = true }
httpmock = { workspace = true }
predicates = { workspace = true }
nix = { workspace = true }
serial_test = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
