[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
# Database
diesel = { version = "2.2.10", features = ["postgres", "r2d2", "numeric", "chrono"] }


diesel_migrations = { version = "2.2.0" }
r2d2 = "0.8.10"

# Utilities
dotenvy = "0.15.0"
bigdecimal = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Error handling
thiserror = "1.0.69"
anyhow = "1.0.98"

# Async
tokio = { version = "1.45.0", features = ["full"] }
futures = "0.3.31"
structopt = { version = "0.3", default-features = false }
# Logging
log = "0.4.27"
env_logger = "0.10.2"

[build-dependencies]
diesel_migrations = { version = "2.2.0" }
